fixed navbar colors and spacing

--- a/designer/css/designer.css
+++ b/designer/css/designer.css
@@ -450,10 +450,6 @@ margin-left:0px;
 margin-right:0px;
 }
 
-#header #superfish ul li {
-border-right:1px solid #346B96;
-}
-
 #topbar-wrapper .column.TopbarRight .block {
 float:right;
 }
@@ -506,6 +502,30 @@ padding-right:15px;
 
 /* superfish styling */
 
+#nav ul.menu li.active-trail, 
+#nav ul.menu li:hover, 
+#nav .menu li li:hover, 
+#nav .menu li li li:hover, 
+#superfish ul.menu li.active-trail, 
+#superfish ul.menu li:hover, 
+#superfish .menu li li:hover, 
+#superfish .menu li li li:hover {
+    background: none repeat scroll 0 0 #193241;
+}
+
+#header #navigation li a.active, 
+#header #navigation li a:visited .active, 
+#header #navigation li a:hover, 
+#header #navigation li li a:hover, 
+#header #navigation li li li a:hover {
+    background: none repeat scroll 0 0 #193241 !important;
+    color: #FFFFFF !important;
+}
+
+#nav li, #superfish li {
+    border-right: 1px solid #193241;
+}
+
 #superfish .menu li:hover ul,
 #superfish .menu li.sfHover ul {
 top:27px;
@@ -519,7 +539,7 @@ text-transform:none;
 #nav .menu a, #nav .menu a:visited, 
 #superfish .menu a, 
 #superfish .menu a:visited {
-   padding: 9px 1em 9px 1em;
+   padding: 7px 1em 7px 1em;
 }
 
 #superfish .menu li li {
@@ -565,14 +585,16 @@ a:focus > .sf-sub-indicator, a:hover > .sf-sub-indicator, a:active > .sf-sub-ind
 margin: 0px;
 float: left;
 }
-  
+
+#header .block-fedora_ilives  .form-item label,  
 #header #google-cse-searchbox-form .form-item label,
 #header #islandora-solr-simple-search-form .form-item label,
 #header #search-box .form-item label,
 #header #search-block-form .form-item label	{ 
  color: #fff; /* Wrapper for the search form */
 }  
-  
+
+#header .block-fedora_ilives .form-item input,   
 #header #google-cse-searchbox-form .form-item input,
 #header #islandora-solr-simple-search-form .form-item input, 
 #header #search-box .form-item input,
@@ -593,6 +615,7 @@ float: left;
   background: #fff url(../images/mag_glass/insearch-magglass.png) no-repeat right center;
 }
 
+#header .block-fedora_ilives .form-item input:hover,
 #header #google-cse-searchbox-form .form-item input:hover,
 #header #islandora-solr-simple-search-form .form-item input:hover, 
 #header #search-box .form-item input:hover,
@@ -601,6 +624,7 @@ background: #fff url(../images/mag_glass/insearch-magglass.png) no-repeat right 
 color: #000;
 }
 
+#header .block-fedora_ilives .form-item input:focus,
 #header #google-cse-searchbox-form .form-item input:focus,
 #header #islandora-solr-simple-search-form .form-item input:focus, 
 #header #search-box .form-item input:focus,
@@ -614,23 +638,17 @@ outline-style:none;
 outline-width:medium;
 }
 
-
+#header .block-fedora_ilives input.form-submit, 
 #header #google-cse-searchbox-form  input.form-submit, 
 #header #islandora-solr-simple-search-form input.form-submit, 
 #header #search-form input.form-submit, 
 #header #search-box input.form-submit,
 #header #search-block-form input.form-submit {
-height: 21px;
-width: 21px;
-cursor: pointer;
-text-indent: -9999px;
-border: none;
-background: url(../images/mag_glass/grey-mag_glass.png) no-repeat left top;  */
 display: none;
-clear: right;
 }
   
-#header #google-cse-searchbox-form  .block-search .form-item  textarea:focus,
+#header .block-fedora_ilives .block-search .form-item  textarea:focus,  
+#header #google-cse-searchbox-form .block-search .form-item  textarea:focus,
 #header #islandora-solr-simple-search-form  .block-search .form-item  textarea:focus, 
 #header #islandora-solr-simple-search-form  .block-search .form-item  textarea:focus input:focus, 
 #header #search-form  .block-search .form-item  textarea:focus, 
@@ -641,11 +659,13 @@ clear: right;
   border: 0px solid #2E5067;
 }
 
+#header .block-fedora_ilivesl label,
 #header #google-cse-searchbox-form label,
 #header #islandora-solr-simple-search-form label, #search-form label {
     display: none;
 }
 
+.NavbarRight .block-fedora_ilivesl,
 .NavbarRight #google-cse-searchbox-form,
 .NavbarRight #islandora-solr-simple-search-form, 
 .NavbarRight #search-form,
@@ -653,3 +673,6 @@ clear: right;
 padding-top: 2px;
 }
 
+.NavbarRight .form-item {
+    margin: 0.3em 0;
+}
